[package]
name = "smart-messroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hd44780-hal = "0.2.1"
linux-embedded-hal = "0.2"
embedded-hal = "0.2.7"

nb = "1.0.0"
rppal = { version = "0.12.0", features = ["hal"] }
hx711_spi = "0.3.1"